k8s/ingress-k8s-dashboard/ingress_dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard  # Adjust Ingress object name as needed
  namespace: kube-system
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    cert-manager.io/cluster-issuer: letsencrypt-clusterissuer-prod  # Select the issuer used for this Ingress object
spec:
  rules:
  - host: FQDN  # Adjust with custom domain URL for internet access (www.custom.com)
    http:
      paths:
      - pathType: Prefix
        path: / # Adjust the path as needed
        backend:
          service:
            name: kubernetes-dashboard  # Adjust Ingress object name as needed
            port:
              number: 443 # Adjust the HTTPS port for this Ingress object
  tls:
  - hosts:
    - FQDN  # Adjust with custom domain URL for internet access (www.custom.com)
    secretName: kubernetes-dashboard-tls-secret # Adjust the name of TLS secret for this Ingress object
